remove code that depends on com.google.*